--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,10 @@
-
+.app{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url("../src/img/bcg_1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: 'Courier New', Courier, monospace;
+    color: white;
+}
