--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .app{
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-image: url("../src/img/bcg_1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
