--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,48 +1,48 @@
+.name-block, .card-block, .menu-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .header{
     position: sticky;
     background-color: rgba(255, 162, 0, 0.35);
-    height: 55px;
     width: 100%;
     font-size: 34px;
-    align-items: center;
-    vertical-align: middle;
-}
-.row{
-    height: 100%;
-}
-.left{
-}
-.menu-block{
-}
-.menu-btn{
-    height: 100%;
-    width: 70px
-}
-.center{
-    height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 0
+}
+
+.menu-btn{
+    width: 70px;
+    padding: 5px;
+    background-color: rgba(0, 255, 255, 0);
+}
+/* .menu-btn:hover{
+    border: transparent;
+}
+.menu-btn:focus + .dropdown-menu{
+    opacity: 1;
+}
+ */
+ .dropdown-menu{
+    display: none;
+    opacity: 0;
+    transition: opacity 2s ease-in-out;
 }
 .name-block{
+    background-color: rgba(0, 100, 0, 0);
+    font-size: 16px;
+    flex-direction: row;
 }
 .main-icon-block{
     width: 50px;
-    height: 100%;
 }
-.right{
-    background-color: rgba(50, 250, 0, 0);
-    height: 100%;
-    display: flex;
-    justify-content: center;
-}
-.shop-card-block{
+.card-block{
     background-color: rgba(130, 0, 252, 0);
-}
-.card-btn{
-    height: 100%;
-    width: 65px
+    width: 65px;
 }
 .icon{
-    width: 100%;
-    height: 100%;
+    width: 40px;
+    height: 40px
 }
