--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -4,13 +4,14 @@
     justify-content: center;
 }
 .header{
-    position: sticky;
     background-color: rgba(255, 162, 0, 0.35);
     width: 100%;
+    height: 8%;
+    max-height: 50px;
     font-size: 34px;
     display: flex;
     justify-content: space-between;
-    padding: 0
+    padding: 0;
 }
 .menu-block{
     position: relative;
@@ -30,10 +31,6 @@
     opacity: 1;
     height: auto;
 }
-/* .menu-block:focus > .dropdown-menu{
-    opacity: 1;
-    display: block;
-} */
 
  .dropdown-menu{
     overflow: hidden;
