--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,13 +1,28 @@
+@media screen and (min-width: 1px){
+    .footer {
+      height: 800px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+}
+@media screen and (min-width: 701px){
+    .footer {
+      height: 600px;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
+}
 .footer{
-    background-color: #ffbc34;
+    /* background-color: #ffbc34; */
     width: 100%;
-    height: 8%;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    background-color: rgba(255, 162, 0, 0.35);
     padding: 0;
     bottom: 0;
     font-size: 14px;
+    overflow: hidden;
 }
 .footer-component{
     height: 100%;
@@ -16,4 +31,6 @@
     justify-content: center;
     align-items: center;
     padding: 0 10px;
+    box-sizing: border-box;
+    text-align: center;
 }
