--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,9 +1,12 @@
-.name-block, .card-block, .menu-btn {
+.name-block,
+.card-block,
+.menu-btn {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.header{
+
+.header {
     background-color: rgba(255, 162, 0, 0.35);
     width: 100%;
     height: 8%;
@@ -13,26 +16,29 @@
     justify-content: space-between;
     padding: 0;
 }
-.menu-block{
+
+.menu-block {
     position: relative;
     display: inline-block;
 }
 
-.menu-btn{
+.menu-btn {
     width: 70px;
     padding: 5px;
     position: relative;
     cursor: pointer;
 }
-.menu-block:hover{
+
+.menu-block:hover {
     background-color: rgba(255, 162, 0, 0.459);
 }
-.menu-block:hover .dropdown-menu{
+
+.menu-block:hover .dropdown-menu {
     opacity: 1;
     height: auto;
 }
 
- .dropdown-menu{
+.dropdown-menu {
     overflow: hidden;
     position: absolute;
     opacity: 0;
@@ -41,39 +47,45 @@
     background-color: rgba(255, 162, 0, 0.459);
     transition: opacity 0.6s ease-in-out;
     z-index: 1;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     margin: 0;
     font-size: 20px;
     list-style: none;
     padding: 0;
 }
-.dropdown-item{
+
+.dropdown-item {
     padding: 5px 10px;
 }
-.dropdown-item:hover{
+
+.dropdown-item:hover {
     background-color: rgb(255, 162, 0);
     font-size: 24px;
     transition: font-size 0.3s ease-in-out;
 }
-a{
+
+a {
     color: white;
     text-decoration: none;
     width: 100%;
 }
 
-.name-block{
+.name-block {
     background-color: rgba(0, 100, 0, 0);
     font-size: 16px;
     flex-direction: row;
 }
-.main-icon-block{
+
+.main-icon-block {
     width: 50px;
 }
-.card-block{
+
+.card-block {
     background-color: rgba(130, 0, 252, 0);
     width: 65px;
 }
-.icon{
+
+.icon {
     width: 40px;
     height: 40px
 }
