--- a/src/Components/Body/body.css
+++ b/src/Components/Body/body.css
@@ -15,6 +15,14 @@
     background: rgba(161, 102, 0, 0.35);
   }
 
+  ::-webkit-scrollbar{
+    height: 7px;
+}
+::-webkit-scrollbar-thumb:horizontal{
+    background: rgba(138, 87, 0, 0.35);
+    border-radius: 10px;
+}
+
   @media (min-width: 601px) and (max-width: 1500px){
     .card-descr {
       font-size: 26px;
@@ -126,4 +134,81 @@
 
   .body-error{
     font-size: 30px;
+  }
+  /* CAROUSEL */
+  /* .container1 {
+    display: flex;
+    overflow: auto;
+    flex: none;
+    height: 300px;
+    width: 100%;
+  }
+  
+  .container1.x1 {
+    flex-flow: row nowrap;
+  }
+  .x1.mandatory-scroll-snapping1 {
+    scroll-snap-type: x mandatory;
+  }
+  .container1 > img {
+    scroll-snap-align: center;
+    flex: none;
+  }
+  
+  .x1.container1 > img {
+    width: 100%;
+    height: 100%;
+  } */
+  .carousel{
+    width: 100%;
+    height: 300px;
+    position: relative;
+    display: flex;
+  }
+  .carousel > ul {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+  .slide{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    opacity: 0;
+    transition: 170ms opacity ease-in-out;
+    transition-delay: 170ms;
+  }
+  .slide[data-active="true"]{
+    opacity: 1;
+    
+  }
+  .carousel-btn{
+    position: absolute;
+    z-index: 2;
+    background: none;
+    border: none;
+    font-size: 2rem;
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(0,0,0,0.2);
+    cursor: pointer;
+    border-radius: 0.25rem;
+  }
+  .carousel-btn:hover,
+  .carousel-btn.focus{
+    color: rgba(255,255,255, 0.6);
+    background-color: rgba(0,0,0,0.4);
+  }
+  .carousel-btn:focus{
+    outline: 1px solid rgba(0,0,0,0.7)
+  }
+  .carousel-btn.prev{
+    left: 1rem
+  }
+  .carousel-btn.next{
+    right: 1rem
   }
