--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -62,6 +62,7 @@
     background-color: rgb(255, 162, 0);
     font-size: 24px;
     transition: font-size 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 a {
