Added hover behavior to Shop List; Adding and removing items from Shop List

--- a/src/Components/Body/body.css
+++ b/src/Components/Body/body.css
@@ -110,6 +110,7 @@
     color: white;
     border-radius: 5px;
     font-size: 20px;
+    cursor: pointer;
   }
   .img-load-container{
     width: 100%;
