--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,5 +1,4 @@
 .name-block,
-.card-btn,
 .menu-btn {
     display: flex;
     align-items: center;
@@ -22,14 +21,14 @@
     display: inline-block;
 }
 
-.menu-btn, .card-btn {
+.menu-btn{
     width: 70px;
     padding: 5px;
     position: relative;
     cursor: pointer;
 }
 
-.menu-block:hover, .card-btn:hover {
+.menu-block:hover{
     background-color: rgba(255, 162, 0, 0.459);
 }
 
